--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
 .app {
   text-align: center;
 }
+
+.Nav {
+  display: grid;
+
+  /* however many items you have in your navbar, 
+  the first number in "repeat(num, fr)" should match the number of items.
+  so if you have 5 items in your navbar, it should read: "repeat(5, 1fr)" */
+  grid-template-columns: repeat(4, 1fr);
+
+  text-align: center;
+  align-items: center;
+  margin: 20px;
+}
